--- a/llm-based_language_learning_chatbot/frontend/package.json
+++ b/llm-based_language_learning_chatbot/frontend/package.json
@@ -18,9 +18,12 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@mdi/font": "^7.4.47",
     "@mdit/plugin-katex": "^0.16.7",
+    "d3": "^7.9.0",
     "element-plus": "^2.9.6",
     "katex": "^0.16.21",
     "markdown-it": "^14.1.0",
+    "markmap-lib": "^0.18.12",
+    "markmap-view": "^0.18.12",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
