New new version

--- a/llm-based_language_learning_chatbot/frontend/package.json
+++ b/llm-based_language_learning_chatbot/frontend/package.json
@@ -20,11 +20,13 @@
     "@mdit/plugin-katex": "^0.16.7",
     "d3": "^7.9.0",
     "element-plus": "^2.9.6",
+    "jwt-decode": "^4.0.0",
     "katex": "^0.16.21",
     "markdown-it": "^14.1.0",
+    "marked": "^17.0.2",
     "markmap-lib": "^0.18.12",
     "markmap-view": "^0.18.12",
-    "pinia": "^3.0.1",
+    "pinia": "^3.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vuetify": "^3.8.1"
