--- a/llm-based_language_learning_chatbot/frontend/package.json
+++ b/llm-based_language_learning_chatbot/frontend/package.json
@@ -20,6 +20,8 @@
     "@mdit/plugin-katex": "^0.16.7",
     "d3": "^7.9.0",
     "element-plus": "^2.9.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.2.0",
     "jwt-decode": "^4.0.0",
     "katex": "^0.16.21",
     "markdown-it": "^14.1.0",
